--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,24 +2,27 @@ version: 2.1
 
 anchors:
   - &node-version-enum
-    - '10.21'
+    - '10.22'
     - '12.18'
-    # TODO: Deprecate Node 13 since it is now unsupported
-    - '13.14'
-    - '14.5'
+    - '14.7'
   - &webpack-version-enum
     - '4'
     - '5'
-
-orbs:
-  node: circleci/node@3.0.1
+  - &node-version-param
+    node-version:
+      default: '12.18'
+      enum: *node-version-enum
+      type: enum
+  - &webpack-version-param
+    webpack-version:
+      default: '4'
+      enum: *webpack-version-enum
+      type: enum
 
 commands:
   install-deps:
     parameters:
-      node-version:
-        enum: *node-version-enum
-        type: enum
+      <<: *node-version-param
     steps:
       - restore_cache:
           keys:
@@ -33,30 +36,21 @@ commands:
           key: node-deps-v1-<< parameters.node-version >>-{{ .Branch }}-{{ checksum "yarn.lock" }}
           paths:
             - ~/.cache/yarn
-  setup-headless-chromium:
-    steps:
-      - run:
-          name: Install dependencies for headless Chromium
-          command: |
-            sudo apt-get update
-            sudo apt-get install -yq \
-            gconf-service libasound2 libatk1.0-0 libatk-bridge2.0-0 libc6 libcairo2 libcups2 libdbus-1-3 \
-            libexpat1 libfontconfig1 libgbm1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 \
-            libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 \
-            libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 \
-            ca-certificates fonts-liberation libappindicator1 libnss3 lsb-release xdg-utils wget
-      - run:
-          name: Setup sandboxing for Chromium
-          command: sudo sysctl -w kernel.unprivileged_userns_clone=1
+
+executors:
+  node:
+    parameters:
+      <<: *node-version-param
+    docker:
+      - image: pmmmwh/puppeteer:<< parameters.node-version >>
 
 jobs:
   lint-and-format:
-    executor: node/default
+    executor: node
     working_directory: ~/project
     steps:
       - checkout
-      - install-deps:
-          node-version: '12.18'
+      - install-deps
       - run:
           name: Check Project Linting
           command: yarn lint
@@ -66,20 +60,15 @@ jobs:
 
   test:
     executor:
-      name: node/default
-      tag: << parameters.node-version >>
+      name: node
+      node-version: << parameters.node-version >>
     parameters:
-      node-version:
-        enum: *node-version-enum
-        type: enum
-      webpack-version:
-        enum: *webpack-version-enum
-        type: enum
+      <<: *node-version-param
+      <<: *webpack-version-param
     parallelism: 4
     working_directory: ~/project
     steps:
       - checkout
-      - setup-headless-chromium
       - install-deps:
           node-version: << parameters.node-version >>
       - run:
