--- a/examples/typescript-without-babel/package.json
+++ b/examples/typescript-without-babel/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.8",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
+    "fork-ts-checker-webpack-plugin": "^5.2.1",
     "html-webpack-plugin": "^4.4.1",
     "react-refresh": "^0.8.3",
     "ts-loader": "^8.0.4",
