--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "@types/webpack": "4.x",
     "react-refresh": ">=0.8.3 <0.10.0",
     "sockjs-client": "^1.4.0",
-    "type-fest": "^0.13.1",
+    "type-fest": ">=0.13.1 <1.0.0",
     "webpack": ">=4.43.0 <6.0.0",
     "webpack-dev-server": "3.x",
     "webpack-hot-middleware": "2.x",
