--- a/package.json
+++ b/package.json
@@ -57,9 +57,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
+    "@types/cross-spawn": "^6.0.2",
+    "@types/fs-extra": "^9.0.4",
+    "@types/jest": "^26.0.15",
     "@types/json-schema": "^7.0.6",
+    "@types/module-alias": "^2.0.0",
     "@types/node": "^14.11.1",
-    "@types/puppeteer": "^3.0.2",
+    "@types/puppeteer": "^5.4.0",
     "@types/webpack": "^4.41.22",
     "babel-loader": "^8.1.0",
     "cross-spawn": "^7.0.3",
@@ -78,18 +82,18 @@
     "nanoid": "^3.1.12",
     "prettier": "^2.1.2",
     "puppeteer": "^5.3.0",
-    "react-refresh": "^0.8.3",
+    "react-refresh": "^0.9.0",
     "rimraf": "^3.0.2",
     "sourcemap-validator": "^2.1.0",
-    "type-fest": "^0.16.0",
-    "typescript": "4.0.3",
+    "type-fest": "^0.19.0",
+    "typescript": "4.1.2",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-cli.latest": "npm:webpack-cli@^4.2.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-plugin-serve": "^1.0.1",
-    "webpack.latest": "npm:webpack@^5.4.0",
+    "webpack.latest": "npm:webpack@^5.6.0",
     "yn": "^4.0.0"
   },
   "peerDependencies": {
