--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "sockjs-client": "^1.4.0",
     "type-fest": ">=0.13.1 <1.0.0",
     "webpack": ">=4.43.0 <6.0.0",
-    "webpack-dev-server": "3.x",
+    "webpack-dev-server": "3.x || 4.x",
     "webpack-hot-middleware": "2.x",
     "webpack-plugin-serve": "0.x || 1.x"
   },
