--- a/examples/typescript-without-babel/package.json
+++ b/examples/typescript-without-babel/package.json
@@ -7,15 +7,14 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
     "fork-ts-checker-webpack-plugin": "^6.0.6",
     "html-webpack-plugin": "^4.4.1",
     "react-refresh": "^0.9.0",
+    "react-refresh-typescript": "^1.1.0",
     "ts-loader": "^8.0.4",
     "typescript": "4.1.3",
     "webpack": "^4.44.2",
