--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
     "sockjs-client": "^1.4.0",
     "type-fest": "^1.0.2",
     "webpack": ">=4.43.0 <6.0.0",
-    "webpack-dev-server": "3.x || 4.x",
+    "webpack-dev-server": "3.x || >=4.0.0-beta.0",
     "webpack-hot-middleware": "2.x",
     "webpack-plugin-serve": "0.x || 1.x"
   },
