--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "puppeteer": "^8.0.0",
     "react-refresh": "^0.10.0",
     "sourcemap-validator": "^2.1.0",
-    "type-fest": "^1.1.1",
+    "type-fest": "^1.1.3",
     "typescript": "4.2.4",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
@@ -102,7 +102,7 @@
     "yn": "^4.0.0"
   },
   "peerDependencies": {
-    "@types/webpack": "4.x",
+    "@types/webpack": "4.x || 5.x",
     "react-refresh": "^0.10.0",
     "sockjs-client": "^1.4.0",
     "type-fest": "^1.0.2",
@@ -132,7 +132,7 @@
     }
   },
   "resolutions": {
-    "type-fest": "^1.1.1"
+    "type-fest": "^1.1.3"
   },
   "engines": {
     "node": ">= 10.13"
