--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "pretest": "yarn link && yarn link \"@pmmmwh/react-refresh-webpack-plugin\"",
     "posttest": "yarn unlink \"@pmmmwh/react-refresh-webpack-plugin\"",
     "test": "node scripts/test.js",
-    "test:webpack-5": "WEBPACK_VERSION=5 yarn test",
+    "test:webpack-4": "cross-env WEBPACK_VERSION=4 yarn test",
     "lint": "eslint --report-unused-disable-directives --ext .js .",
     "lint:fix": "yarn lint --fix",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
@@ -66,11 +66,12 @@
     "@types/jest": "^26.0.23",
     "@types/json-schema": "^7.0.6",
     "@types/module-alias": "^2.0.0",
-    "@types/node": "^15.0.3",
+    "@types/node": "^16.0.0",
     "@types/puppeteer": "^5.4.0",
-    "@types/webpack": "^4.41.28",
+    "@types/webpack": "^5.28.0",
     "babel-jest": "^27.0.5",
     "babel-loader": "^8.1.0",
+    "cross-env": "^7.0.3",
     "cross-spawn": "^7.0.3",
     "del-cli": "^3.0.1",
     "eslint": "^7.26.0",
@@ -90,22 +91,22 @@
     "puppeteer": "^9.1.1",
     "react-refresh": "^0.10.0",
     "sourcemap-validator": "^2.1.0",
-    "type-fest": "^1.1.3",
-    "typescript": "4.3.2",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-cli.latest": "npm:webpack-cli@4.x",
-    "webpack-dev-server": "^3.11.0",
+    "type-fest": "^1.2.1",
+    "typescript": "4.3.5",
+    "webpack": "^5.42.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-cli.legacy": "npm:webpack-cli@3.x",
+    "webpack-dev-server": "^3.11.2",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-plugin-serve": "^1.0.1",
-    "webpack.latest": "npm:webpack@5.x",
+    "webpack-plugin-serve": "^1.4.1",
+    "webpack.legacy": "npm:webpack@4.x",
     "yn": "^4.0.0"
   },
   "peerDependencies": {
     "@types/webpack": "4.x || 5.x",
     "react-refresh": "^0.10.0",
     "sockjs-client": "^1.4.0",
-    "type-fest": "^1.0.2",
+    "type-fest": "1.x",
     "webpack": ">=4.43.0 <6.0.0",
     "webpack-dev-server": "3.x || >=4.0.0-beta.0",
     "webpack-hot-middleware": "2.x",
@@ -132,7 +133,7 @@
     }
   },
   "resolutions": {
-    "type-fest": "^1.2.0"
+    "type-fest": "^1.2.1"
   },
   "engines": {
     "node": ">= 10.13"
